fix acf block field input on small block

--- a/src/assets/scss/blocks/acf/_acf-block.scss
+++ b/src/assets/scss/blocks/acf/_acf-block.scss
@@ -2,22 +2,25 @@
 /* ACF block controls
 --------------------------------------------- */
 .acf-block-body {
-  font-size: 13px;
-
-  input, select, textarea {
-    font-size: 13px;
-    padding: 4px 8px;
-    line-height: 1.4;
-    border: 1px solid #8c8f94;
-    background: #fff;
-  }
 
   .acf-block-preview {
     min-height: 0;
   }
 
   .acf-block-fields {
+    background-color: color(wp, acf-box);
+    font-size: 13px;
     margin-bottom: var(--global--block-margin);
+    min-width: 300px;
+    z-index: 1;
+
+    input, select, textarea {
+      font-size: 13px;
+      padding: 4px 8px;
+      line-height: 1.4;
+      border: 1px solid #8c8f94;
+      background: #fff;
+    }
 
     select {
       width: 100%;
@@ -26,8 +29,4 @@
       height: auto;
     }
   }
-}
-
-.acf-block {
-
 }
